# Digital-Soil-Analysis-

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  malawi_soil_prototype.csv  pyproject.toml  requirements.txt  soil_controller.py  start.sh
app/: main.py
app/cntrollers/: soil_controller.py
app/core/: config.py
app/db/: session.py
app/ml/: crop_encoder.pkl  crop_recommender_model.pkl  model.py  nutrient_model.pkl  report_on_recommended_crop.py  scaler_B_crops.pkl  scaler_X.pkl  scaler_y.pkl  scalers.py
app/routes/: deps.py  soil_routes.py  user_routes.py
app/schemas/: soil.py  soil_schema.py  user_schema.py
app/utils/: security.py
